--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,13 @@ android {
     buildFeatures {
         viewBinding true
     }
+    sourceSets {
+        main {
+            res {
+                srcDirs 'src\\main\\res', 'src\\main\\res\\2', 'src\\main\\res\\drawable\\card'
+            }
+        }
+    }
 }
 
 dependencies {
